--- a/config/database.yml
+++ b/config/database.yml
@@ -3,7 +3,7 @@ development:
   encoding: unicode
   database: not_twitter_development
   pool: 5
-  username: not_twitter
+  username: marc
   password:
 
 test:
@@ -11,5 +11,5 @@ test:
   encoding: unicode
   database: not_twitter_test
   pool: 5
-  username: not_twitter
+  username: marc
   password:
