Add sign in and sign out. Add more integration tests and cucumber features.

--- a/config/database.yml
+++ b/config/database.yml
@@ -6,10 +6,12 @@ development:
   username: marc
   password:
 
-test:
+test: &test
   adapter: postgresql
   encoding: unicode
   database: not_twitter_test
   pool: 5
   username: marc
   password:
+cucumber:
+  <<: *test
